--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,25 @@
-# The Docker image that will be used to build your app
-image: node:20-alpine
-# Functions that should be executed before the build script is run
-before_script:
-  - npm install
-pages:
+image: 'node:20-alpine'
+
+stages:
+  - build
+  - deploy
+
+build:
+  stage: build
   script:
+    - npm install
     - npm run build
   artifacts:
     paths:
-      # The folder that contains the files to be exposed at the Page URL
       - public
-  rules:
-    # This ensures that only pushes to the default branch will trigger
-    # a pages deploy
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+
+pages:
+  stage: deploy
+  script:
+    - echo 'Pages deployment job'
+  artifacts:
+    paths:
+      - public
+  only:
+    - main
+
